# steps-widget

./: .nojekyll  CLAUDE.md  README.md  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: conda-release.yml
api/: StepsWidget.html  index.html  register_steps_magic.html  run_student_file.html
conda-build/: meta.yaml
docs/: README.md  _quarto.yml  objects.txt
docs/_inv/: python_objects.txt
docs/api/: StepsWidget.qmd  _sidebar.yml  functionname.qmd  index.qmd  register_steps_magic.qmd  run_student_file.qmd  scriptname.qmd
docs/pages/: example.ipynb  overview.ipynb
pages/: example.html  overview.html
src/steps_widget/: __init__.py  print_steps.py  steps.py  widget.py
test/: conftest.py  test_modulename.py  test_print_steps.py  test_steps.py  test_widget.py
